[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://scripts/WorldCreator.gd" id="1_0"]
[ext_resource type="Theme" path="res://ui/theme/global_theme.tres" id="2_0"]
[ext_resource type="Script" path="res://scripts/preview/world_preview.gd" id="3_0"]
[ext_resource type="Script" path="res://scripts/world_creation/TerrainGenerator.gd" id="4_0"]
[ext_resource type="Script" path="res://scripts/preview/PreviewManager.gd" id="5_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.12, 0.1, 0.08, 1)
border_width_left = 3
border_color = Color(0.85, 0.7, 0.4, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.18, 0.15, 0.12, 1)
border_width_left = 3
border_color = Color(0.85, 0.7, 0.4, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.25, 0.2, 0.15, 1)
border_width_left = 4
border_color = Color(0.95, 0.85, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.22, 0.11, 0, 0.667)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.7, 0.4, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.18, 0.15, 0.12, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.7, 0.4, 0.4)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6"]
bg_color = Color(0.12, 0.1, 0.08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 0.3)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0, 0, 0, 1)
ambient_light_source = 2
ambient_light_color = Color(0.05, 0.05, 0.1, 1)
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = true
glow_levels/4 = true
glow_levels/5 = true
glow_levels/6 = true
glow_intensity = 2.0
glow_strength = 1.5
glow_blend_mode = 1
glow_bloom = 0.6
glow_hdr_threshold = 0.8
auto_exposure_enabled = true
auto_exposure_scale = 1.0
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_sun_scatter = 0.0
fog_density = 0.02
fog_height = 0.0
fog_height_density = 0.0
fog_aerial_perspective = 0.0

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 1)
colors = PackedColorArray(0.6, 0.9, 1, 1, 0.6, 0.9, 1, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, 1, 0)
spread = 360.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
gravity = Vector3(0, 0.5, 0)
scale_min = 0.5
scale_max = 2.0
color_ramp = SubResource("Gradient_1")

[node name="WorldCreator" type="MarginContainer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_constants/separation = 8

[node name="NewButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "New"

[node name="LoadButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Load"

[node name="SaveButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Save"

[node name="ExportButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Export"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LeftPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4")

[node name="TabList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SeedSizeTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "1  SEED & SIZE"
horizontal_alignment = 0

[node name="TerrainTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "2  TERRAIN"
horizontal_alignment = 0

[node name="ClimateTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "3  CLIMATE"
horizontal_alignment = 0

[node name="BiomesTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "4  BIOMES"
horizontal_alignment = 0

[node name="CivilizationsTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "5  CIVILIZATIONS"
horizontal_alignment = 0

[node name="ResourcesMagicTabButton" type="Button" parent="VBoxContainer/HBoxContainer/LeftPanel/TabList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
toggle_mode = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_font_sizes/font_size = 28
text = "6  RESOURCES & MAGIC"
horizontal_alignment = 0

[node name="CenterPreview" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="WorldPreviewViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/CenterPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size = Vector2(512, 512)
transparent_bg = false
render_target_update_mode = 2
debug_draw = 0
disable_3d = false

[node name="WorldPreviewRoot" type="Node3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 0, 0)
light_color = Color(0.2, 0.6, 1, 1)
light_energy = 0.5
shadow_enabled = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport"]
environment = SubResource("Environment_1")

[node name="terrain_mesh" type="MeshInstance3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
script = ExtResource("4_0")

[node name="biome_overlay" type="MeshInstance3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
visible = false

[node name="MagicParticles" type="GPUParticles3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
amount = 2000
lifetime = 20.0
emitting = false
process_material = SubResource("ParticleProcessMaterial_1")

[node name="PreviewManager" type="Node" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
script = ExtResource("5_0")

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/HBoxContainer/CenterPreview/WorldPreviewViewport/WorldPreviewRoot"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 100, -200)
projection = 0
current = true
fov = 60.0
near = 0.1
far = 10000.0
dof_blur_far_enabled = true
dof_blur_far_distance = 150.0
dof_blur_far_transition = 75.0
dof_blur_far_amount = 1.0
dof_blur_near_enabled = true
dof_blur_near_distance = 50.0
dof_blur_near_transition = 25.0
dof_blur_near_amount = 0.3

[node name="RightParametersPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5")

[node name="ParametersScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/RightParametersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParametersVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="FantasyStyleContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FantasyStyleLabel" type="Label" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox/FantasyStyleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Fantasy Style"

[node name="FantasyStyleSelector" type="OptionButton" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox/FantasyStyleContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 3

[node name="PreviewModeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PreviewModeLabel" type="Label" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox/PreviewModeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Preview Mode"

[node name="PreviewModeSelector" type="OptionButton" parent="VBoxContainer/HBoxContainer/RightParametersPanel/ParametersScroll/ParametersVBox/PreviewModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
